--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "lib/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "build": "tsc",
         "package": "npm run build && ncc build --source-map"
     },
@@ -17,8 +17,11 @@
         "parse-diff": "^0.9.0"
     },
     "devDependencies": {
+        "@types/jest": "^28.1.7",
         "@types/node": "^17.0.21",
         "@vercel/ncc": "^0.33.3",
-        "typescript": "^4.6.2"
+        "jest": "^28.1.3",
+        "ts-jest": "^28.0.8",
+        "typescript": "^4.7.4"
     }
 }
