--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "lib/index.js",
     "scripts": {
         "test": "jest",
-        "build": "tsc",
-        "package": "npm run build && ncc build --source-map"
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
@@ -19,7 +18,6 @@
     "devDependencies": {
         "@types/jest": "^28.1.7",
         "@types/node": "^17.0.21",
-        "@vercel/ncc": "^0.33.3",
         "jest": "^28.1.3",
         "ts-jest": "^28.0.8",
         "typescript": "^4.7.4"
