--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   coverage-report-file:
     description: Input file with coverage report. json c8/v8 report
     required: false
-    default: coverage-final.json
+    default: coverage/coverage-final.json
   markdown-output-file:
     description: Output markdown file
     required: false
